<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018  Clemens Bartz
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vsLauncher"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Launcher">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:weightSum="120">

        <View
            android:id="@+id/topFiller"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0" />

        <FrameLayout
            android:id="@+id/flWidget"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="120">

        </FrameLayout>

        <View
            android:id="@+id/bottomFiller"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:contentDescription="@string/openDrawer"
            android:text="@string/up"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivDock1"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:contentDescription="@string/unpinnedDockItem"
                android:focusable="true"
                android:padding="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_launcher" />

            <ImageView
                android:id="@+id/ivDock2"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:contentDescription="@string/unpinnedDockItem"
                android:focusable="true"
                android:padding="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_launcher" />

            <ImageView
                android:id="@+id/ivDock3"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:contentDescription="@string/unpinnedDockItem"
                android:focusable="true"
                android:padding="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_launcher" />

            <ImageView
                android:id="@+id/ivDock4"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:contentDescription="@string/unpinnedDockItem"
                android:focusable="true"
                android:padding="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_launcher" />

            <ImageView
                android:id="@+id/ivDock5"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:contentDescription="@string/unpinnedDockItem"
                android:focusable="true"
                android:padding="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_launcher" />

            <ImageView
                android:id="@+id/ivDock6"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:contentDescription="@string/unpinnedDockItem"
                android:focusable="true"
                android:padding="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_launcher"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/ivDock7"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:contentDescription="@string/unpinnedDockItem"
                android:focusable="true"
                android:padding="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_launcher"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <GridView
            android:id="@+id/gvApplications"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clipChildren="true"
            android:clipToPadding="true"
            android:columnWidth="75dp"
            android:horizontalSpacing="10dp"
            android:numColumns="auto_fit"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:scrollbarStyle="insideOverlay"
            android:smoothScrollbar="false"
            android:stretchMode="columnWidth"
            android:verticalSpacing="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1"
        android:baselineAligned="false">

        <ListView
            android:id="@+id/lvApplications"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:clipToPadding="true"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:scrollbarStyle="insideOverlay"
            android:layout_weight="1"/>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/lvApplicationsSections"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="1dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:clipToPadding="true"/>
    </LinearLayout>

</ViewFlipper>