<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2018  Clemens Bartz
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="appName">Essential Launcher</string>
    <string name="openDrawer">Show all apps</string>
    <string name="showAppInfo">Show app info</string>
    <string name="unpinnedDockItem">Unpinned dock item</string>
    <string name="icon" translatable="false">Icon</string>
    <string name="chooseWidget">Choose widget…</string>
    <string name="layoutWidget">Layout widget…</string>
    <string name="removeWidget">Remove widget</string>
    <string name="widgetLayoutTopQuarter">Top 1/4</string>
    <string name="widgetLayoutTopThird">Top 1/3</string>
    <string name="widgetLayoutTopHalf">Top 1/2</string>
    <string name="widgetLayoutFull">Full Screen</string>
    <string name="widgetLayoutCenter">Center 1/2</string>
    <string name="widgetLayoutBottomHalf">Bottom 1/2</string>
    <string name="widgetLayoutBottomThird">Bottom 1/3</string>
    <string name="widgetLayoutBottomQuarter">Bottom 1/4</string>
    <string name="up" translatable="false">^</string>
    <string name="showAsGrid">Show as grid</string>
    <string name="hidden">Hidden</string>
    <string name="showHiddenApps">Show hidden</string>
    <string name="pinApp">Pin app…</string>
    <string name="search">Search</string>
    <string name="showAllDockIcons">Show all dock icons</string>
    <string name="gestureSwipeUp" translatable="false">Swipe up gesture…</string>
    <string name="gestureSwipeDown" translatable="false">Swipe down gesture…</string>
    <string name="showStatusbar" translatable="false">Show notifications</string>
    <string name="showDrawer" translatable="false">Show app drawer</string>
    <string name="showSearch" translatable="false">Show search</string>
</resources>
